# sticks_and_rockets

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt  bomb.cpp  bomb.hpp  child.cpp  child.hpp  entity.hpp  game.cpp  game.hpp  main.cpp  particleeffect.cpp  particleeffect.hpp  player.cpp  player.hpp  playerOLD.hpp.txt  ragdoll.cpp  ragdoll.hpp
game/physics/: dynamicobject.cpp  dynamicobject.hpp  rigidlink.cpp  rigidlink.hpp  shape.cpp  shape.hpp  simulation.cpp  simulation.hpp  trigger.hpp  triggerarea.cpp  triggerarea.hpp  vectormath.cpp  vectormath.hpp  vertex.cpp  vertex.hpp
game/utils/: algo.cpp  algo.hpp  debugwriter.cpp  debugwriter.hpp  input.cpp  input.hpp
models/: box.toml  ragdoll.toml  triangle.toml
